* AbstractAutowireCapableBeanFactory throws BeanCreationException if a factory method returned null
* DefaultListableBeanFactory does not create beans with "factory-bean" for type check if "includeFactoryBeans"=false

Package org.springframework.core
* fixed PropertiesLoaderSupport to correctly ignore a resource not found failure if "ignoreResourceNotFound" is "true"

Package org.springframework.orm
* added "allowCreate" flag to TransactionAwarePersistenceManagerFactoryProxy, allowing to enforce transactional PMs


Changes in version 1.2.2 (5.7.2005)
-----------------------------------

Package org.springframework.aop
* added "getTargetClass" method to AopProxyUtils (factored out from the JMX support's AbstractMBeanInfoAssembler)

Package org.springframework.beans
* BeanWrapperImpl supports JDK 1.5 enums and old-style enum classes: String values will be treated as enum value names
* added convenience constructor to PropertyComparator, passing in "property", "ignoreCase" and "ascending" directly
* optimized PropertyComparator to reuse a single BeanWrapperImpl instance without default editors
* factored out protected "copySortDefinition" and "doSort" hooks in PagedListHolder, allowing for custom comparators
* added "beanNameSeparator" property to PropertyOverrideConfigurer, allowing to specify a separator other than a dot
* MethodInvokingFactoryBean throws target exception in case of InvocationTargetException
* fixed AbstractBeanFactory to apply custom property editors even for typed values as collection entries
* fixed AbstractBeanFactory to hold names of dependent beans in Set rather than List, avoiding leak for prototype beans
* fixed AbstractAutowireCapableBeanFactory to not track dependencies for passed-in existing beans (avoiding memory leak)
* fixed DefaultListableBeanFactory to exclude bean definitions with factory method from pre-instantiation type matching